--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-argparse==1.2.1		
-cchardet	
-lxml
-requests==2.2.1
-numpy~=1.19.5
-torch~=1.10.2
-transformers~=4.3.2
-setuptools~=58.0.4
-configparser~=5.2.0
-wandb~=0.10.20
-pandas~=1.1.5
-tqdm~=4.63.0
-datasets~=1.17.0
-trl~=0.0.3
-nltk~=3.6.7
+configparser==5.2.0
+datasets==1.17.0
+huggingface-hub==0.4.0
+nltk==3.6.7
+numpy==1.19.5
+pandas==1.1.5
+requests==2.27.1
+torch==1.10.2
+tqdm==4.63.0
+transformers==4.3.2
+wandb==0.10.20
