--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ nltk==3.6.7
 numpy==1.19.5
 pandas==1.1.5
 requests==2.27.1
+sentencepiece==0.1.96
+tokenizers==0.10.3
 torch==1.10.2
 tqdm==4.63.0
 transformers==4.3.2
